...
                children: [
                  Flexible(
                    child: DropdownButtonFormField(
                      isExpanded: true,
                      decoration: const InputDecoration(
                        border: UnderlineInputBorder(),
                        labelText: 'あなたのパーティ'
                      ),
                      selectedItemBuilder: (context) {
                        return [
                          for (final party in parties)
                            Text(party.name),
                        ];
...
                mainAxisSize: MainAxisSize.min,
                children: [
                  Flexible(
                    child: TextFormField(
                      decoration: const InputDecoration(
                        border: UnderlineInputBorder(),
                        labelText: 'あいての名前'
                      ),
                      onChanged: (value) {
                        widget.battle.opponentName = value;
                        widget.battle.updateIsValid();
                        setState(() {});
                      },
...
                    flex: 8,
                    child: TypeAheadField(
                      textFieldConfiguration: TextFieldConfiguration(
                        controller: opponentPokemon1Controller,
                        decoration: const InputDecoration(
                          border: UnderlineInputBorder(),
                          labelText: 'ポケモン1'
                        ),
                      ),
                      autoFlipDirection: true,
                      suggestionsCallback: (pattern) async {
                        List<PokeBase> matches = [];
                        matches.addAll(pokeData.pokeBase.values);
...
                  SizedBox(width: 10),
                  Expanded(
                    flex: 2,
                    child: DropdownButtonFormField(
                      decoration: const InputDecoration(
                        border: UnderlineInputBorder(),
                        labelText: 'せいべつ1'
                      ),
                      items: <DropdownMenuItem>[
                        for (var type in Sex.values)
                          DropdownMenuItem(
                            value: type,
                            child: type.displayIcon,
...
                    flex: 8,
                    child: TypeAheadField(
                      textFieldConfiguration: TextFieldConfiguration(
                        controller: opponentPokemon2Controller,
                        decoration: const InputDecoration(
                          border: UnderlineInputBorder(),
                          labelText: 'ポケモン2'
                        ),
                      ),
                      autoFlipDirection: true,
                      suggestionsCallback: (pattern) async {
                        List<PokeBase> matches = [];
                        matches.addAll(pokeData.pokeBase.values);
...
                  SizedBox(width: 10),
                  Expanded(
                    flex: 2,
                    child: DropdownButtonFormField(
                      decoration: const InputDecoration(
                        border: UnderlineInputBorder(),
                        labelText: 'せいべつ2'
                      ),
                      items: <DropdownMenuItem<Sex>>[
                        for (var type in Sex.values)
                          DropdownMenuItem<Sex>(
                            value: type,
                            child: type.displayIcon,
...
                    flex: 8,
                    child: TypeAheadField(
                      textFieldConfiguration: TextFieldConfiguration(
                        controller: opponentPokemon3Controller,
                        decoration: const InputDecoration(
                          border: UnderlineInputBorder(),
                          labelText: 'ポケモン3'
                        ),
                      ),
                      autoFlipDirection: true,
                      suggestionsCallback: (pattern) async {
                        List<PokeBase> matches = [];
                        matches.addAll(pokeData.pokeBase.values);
...
                    flex: 8,
                    child: TypeAheadField(
                      textFieldConfiguration: TextFieldConfiguration(
                        controller: opponentPokemon4Controller,
                        decoration: const InputDecoration(
                          border: UnderlineInputBorder(),
                          labelText: 'ポケモン4'
                        ),
                      ),
                      autoFlipDirection: true,
                      suggestionsCallback: (pattern) async {
                        List<PokeBase> matches = [];
                        matches.addAll(pokeData.pokeBase.values);
...
                    flex: 8,
                    child: TypeAheadField(
                      textFieldConfiguration: TextFieldConfiguration(
                        controller: opponentPokemon5Controller,
                        decoration: const InputDecoration(
                          border: UnderlineInputBorder(),
                          labelText: 'ポケモン5'
                        ),
                      ),
                      autoFlipDirection: true,
                      suggestionsCallback: (pattern) async {
                        List<PokeBase> matches = [];
                        matches.addAll(pokeData.pokeBase.values);
...
                    flex: 8,
                    child: TypeAheadField(
                      textFieldConfiguration: TextFieldConfiguration(
                        controller: opponentPokemon6Controller,
                        decoration: const InputDecoration(
                          border: UnderlineInputBorder(),
                          labelText: 'ポケモン6'
                        ),
                      ),
                      autoFlipDirection: true,
                      suggestionsCallback: (pattern) async {
                        List<PokeBase> matches = [];
                        matches.addAll(pokeData.pokeBase.values);
...
                  SizedBox(width: 10),
                  Expanded(
                    flex: 2,
                    child: DropdownButtonFormField(
                      decoration: const InputDecoration(
                        border: UnderlineInputBorder(),
                        labelText: 'せいべつ6'
                      ),
                      items: <DropdownMenuItem<Sex>>[
                        for (var type in Sex.values)
                          DropdownMenuItem<Sex>(
                            value: type,
                            child: type.displayIcon,
...
