{
  "@@locale":"ja",
  "commonPokemon": "ポケモン",
  "commonItem": "もちもの",
  "commonBerry": "きのみ",
  "commonTerastal": "テラスタル",
  "commonMove": "わざ",
  "commonNone": "なし",
  "commonType": "タイプ",
  "commonType1": "タイプ1",
  "commonType2": "タイプ2",
  "commonTeraType": "テラスタイプ",
  "commonLevel": "レベル",
  "commonGender": "せいべつ",
  "commonNature": "せいかく",
  "commonAbility": "とくせい",
  "commonCopy": "コピー作成",
  "commonDelete": "削除",
  "commonSelectAll": "すべて選択",
  "commonSort": "並べ替え",
  "commonFilter": "フィルタ",
  "commonEdit": "編集",
  "commonDone": "完了",
  "commonTotal": "合計",
  "commonLoading": "データ読み込み中です。しばらくお待ちください...",
  "commonAttack": "こうげき",
  "commonDefense": "ぼうぎょ",
  "commonSAttack": "とくこう",
  "commonSDefense": "とくぼう",
  "commonSpeed": "すばやさ",
  "commonAccuracy": "命中率",
  "commonEvasiveness": "回避率",
  "commonCancel": "キャンセル",
  "commonYes": "はい",
  "commonNo": "いいえ",
  "commonApply": "適用",
  "commonReset": "リセット",
  "commonMovePhysical": "物理",
  "commonMoveSpecial": "特殊",
  "commonMoveStatus": "変化",
  "commonMovePower": "威力",
  "commonMoveAccuracy": "命中",
  "commonStatRace": "種族値",
  "commonStatIndividual": "個体値",
  "commonStatEffort": "努力値",
  "commonStatReal": "実数値",
  "commonStatusCondition": "状態変化",
  "commonFields": "場",
  "tutorialSkip": "スキップ",
  "tutorialWelcome": "ポケレコへようこそ！",
  "tutorialAddPokemon": "初めに、ボタンを押してポケモンの登録を始めましょう。",
  "tutorialTitleRegisterPokemon": "ポケモン名入力",
  "tutorialInputPokemonName": "この画面ではポケモンの情報の登録を行います。\n初めに、登録したいポケモンの名前を入力してください。",
  "tutorialTitleRegisterPokemon2": "ポケモン情報の入力",
  "tutorialInputPokemonInfo": "続けてレベルやせいかく、わざなどの情報を入力してください。\n未入力部分は赤文字で表示されます。",
  "tutorialTitleRegisterPokemon3": "カメラで撮影して入力(ベータ版)",
  "tutorialInputPokemonInfoFromCamera": "ポケモン名を入力した後は、ゲーム画面を撮影して各種パラメータやわざ情報を自動で入力することができます。\n※現在この機能はベータ版です。",
  "tutorialTitleRegisterPokemon4": "保存",
  "tutorialRegisterPokemonSave": "必要な情報を入力し終えたらボタンを押して保存してください。",
  "tutorialTitleCompleteRegisterPokemon": "ポケモン登録完了！",
  "tutorialToPartyTab": "ポケモンの登録が完了しました。\nポケモン一覧画面ではタップして詳細を確認できます。\n\n続いて、画面下の「パーティ」タブをタップしてください。",
  "tutorialTitleAddParty": "パーティの登録",
  "tutorialAddParty": "ボタンを押してパーティの登録を始めましょう。",
  "tutorialTitleRegisterParty": "パーティ情報の入力",
  "tutorialInputPartyInfo": "この画面ではパーティの情報の登録を行います。\nパーティ名と、ポケモン・もちものを最大6つまで入力してください。",
  "tutorialTitleRegisterParty2": "保存",
  "tutorialRegisterPartySave": "必要な情報を入力し終えたらボタンを押して保存してください。",
  "tutorialTitleCompleteRegisterParty": "パーティ登録完了！",
  "tutorialToBattleTab": "パーティの登録が完了しました。\nパーティ一覧画面ではタップして詳細を確認できます。\n\n続いて、画面下の「対戦」タブをタップしてください。",
  "tutorialTitleAddBattle": "対戦の記録",
  "tutorialAddBattle": "ボタンを押して対戦の記録を始めましょう。\n実際に対戦を行っていなくても大丈夫です。シミュレーションのように使うことができます。",
  "tutorialTitleRegisterBattleBasic": "対戦基本情報の入力",
  "tutorialInputBattleName": "この画面では対戦情報の登録を行います。\nまず、対戦名と対戦日時を入力してください。",
  "tutorialTitleRegisterBattleBasic2": "あなたのパーティ選択",
  "tutorialInputYourParty": "次に、対戦で使用するパーティを選択します。",
  "tutorialTitleRegisterBattleBasic3": "相手の名前、ポケモン入力",
  "tutorialInputOpponentName": "対戦相手の名前とポケモン・せいべつを6つまで入力します。",
  "tutorialTitleRegisterBattleBasic4": "次へ進む",
  "tutorialRegisterBattleNext": "必要な情報を入力し終えたらボタンを押して次画面へ進んでください。",
  "tutorialTitleRegisterBattleSelectFirstPokemon": "選出ポケモン",
  "tutorialRegisterBattleSelectFirstPokemon": "あなたが選出するポケモンを3匹まで、相手が最初に選出するポケモンをタップして選択してください。",
  "tutorialTitleRegisterBattleSelectFirstPokemon2": "次へ進む",
  "tutorialRegisterBattleNext2": "選出ポケモンを選択し終えたらボタンを押して次画面へ進んでください。",
  "tutorialTitleRegisterBattleTurn": "各ターンの記録",
  "tutorialRegisterBattleTurn": "この画面以降では各ターンに各プレイヤーが取った行動やバトル中に起こった様々な処理(とくせい・もちものの発動や天気の効果等)を記録できます。\n\n画面上部左側では現在のあなたのポケモンステータスを確認できます。\nまた、ポケモンアイコンをタップしてステータスを編集できます。",
  "tutorialTitleRegisterBattleTurn2": "あなたの行動の入力",
  "tutorialRegisterBattleTurn2": "画面上部右側ではあなたの行動を選択して記録します。\nわざの行動を選んだ場合、わざに応じて詳細な入力も続けて行えます。",
  "tutorialTitleRegisterBattleTurn3": "相手ポケモンのステータス",
  "tutorialRegisterBattleTurn3": "画面下部左側では現在の相手ポケモンのステータスを確認できます。\nあなたのポケモンと同様に、ポケモンアイコンをタップしてステータスを編集できます。",
  "tutorialTitleRegisterBattleTurn4": "相手の行動の入力",
  "tutorialRegisterBattleTurn4": "画面下部右側では相手の行動を選択して記録します。\n記録方法はあなたの行動の記録時と同じです。",
  "tutorialTitleRegisterBattleTurn5": "ターン内処理",
  "tutorialRegisterBattleTurn5": "画面中央にはこのターンで起こった行動や処理が順番に表示されます。\n処理を追加したい場合は「＋」ボタンをタップします。\nまた、処理名をタップすることで内容を編集、削除できます。",
  "tutorialTitleRegisterBattleTurn6": "次のターンへ進む",
  "tutorialRegisterBattleTurn6": "ターン内のお互いの行動を入力し終えた後はこのボタンをタップして次のターン入力へ進むことができます。",
  "tutorialTitleRegisterBattleTurn7": "保存",
  "tutorialRegisterBattleTurn7": "このボタンをタップして対戦内容を保存できます。",
  "tutorialTitleRegisterBattleTurn8": "お疲れさまでした！",
  "tutorialRegisterBattleTurn8": "以上でチュートリアルは終了となります。\nぜひ本アプリを活用してポケモン対戦に役立ててください！",
  "tabBattles": "対戦",
  "tabPokemons": "ポケモン",
  "tabParties": "パーティ",
  "tabSettings": "設定",
  "viewToolTipPrev": "前へ",
  "viewToolTipNext": "次へ",
  "viewToolTipEdit": "編集",
  "registerSave": "保存",
  "filterDialogWinOrLose": "勝敗",
  "filterDialogUndecided": "未定",
  "filterDialogWin": "勝ち",
  "filterDialogLose": "負け",
  "filterDialogParty": "パーティ",
  "filterDialogAddParty": "パーティ追加",
  "filterDialogProducer": "作成者",
  "filterDialogOwnParty": "自分のパーティ",
  "filterDialogOpponentParty": "対戦相手のパーティ",
  "filterDialogWinningRate": "勝率",
  "filterDialogAddPokemon": "ポケモン追加",
  "filterDialogOwnPokemon": "自分のポケモン",
  "filterDialogOpponentPokemon": "対戦相手のポケモン",
  "filterDialogPokemonName": "ポケモン名",
  "filterDialogAddMove": "わざ追加",
  "filterDialogAddAbility": "とくせい追加",
  "filterDialogAddNature": "せいかく追加",
  "dialogQuestionDeleteChanges": "変更を破棄してもいいですか？",
  "dialogQuestionDeleteParties1": "選択したパーティを削除してもいいですか？",
  "dialogQuestionDeleteParties2": "対戦記録に含まれているパーティを選択しています",
  "dialogQuestionDeletePokemons1": "選択したポケモンを削除してもいいですか？",
  "dialogQuestionDeletePokemons2": "パーティに含まれているポケモンを選択しています",
  "pokemonsTabPokemonName": "ポケモン名",
  "pokemonsTabNickName": "ニックネーム(任意)",
  "pokemonsTabRememberingMoves": "覚えているわざ",
  "pokemonsTabRegisterPokemon": "ポケモン登録",
  "pokemonsTabEditPokemon": "ポケモン編集",
  "pokemonsTabConfMove": "対戦で確認できたわざ",
  "pokemonsTabConfValueRange": "対戦で確認できた実数値の範囲",
  "pokemonsTabConfTeraType": "対戦で確認できたテラスタイプ",
  "pokemonsTabTitleSelectPokemon": "ポケモン選択",
  "pokemonsTabTitlePokemonList": "ポケモン一覧",
  "pokemonsTabNoPokemon": "表示できるポケモンのデータがありません。",
  "partiesTabPartyName": "パーティ名",
  "partiesTabSelectPokemon": "ポケモン選択",
  "partiesTabRegisterParty": "パーティ登録",
  "partiesTabEditParty": "パーティ編集",
  "partiesTabTitleSelectParty": "パーティ選択",
  "partiesTabTitlePartyList": "パーティ一覧",
  "partiesTabNoParty": "表示できるパーティがありません。",
  "partiesTabWinningRate": "勝率",
  "battlesTabTitleRegisterBattle": "対戦登録",
  "battlesTabTitleBattleBase": "基本情報",
  "battlesTabTitleSelectingPokemon": "選出ポケモン",
  "battlesTabTitleTurn": "ターン",
  "battlesTabSelectParty": "パーティ選択",
  "battlesTabStatusModeRank": "ランク",
  "battlesTabStatusModeRace": "種族値",
  "battlesTabStatusModeStatusNoCorrection": "ステータス(補正前)",
  "battlesTabStatusModeStatusWithCorrection": "ステータス(補正後)",
  "battlesTabStatusModeEdit": "編集",
  "battlesTabStatusModeDone": "完了",
  "battlesTabToolTipPrev": "前へ",
  "battlesTabToolTipNext": "次へ",
  "battlesTabToolTipDelete": "削除",
  "battlesTabQuestionSavePartyPokemon": "相手パーティ・ポケモンを保存しますか？",
  "battlesTabQuestionDeleteAllEditing": "入力中の対戦記録の内容をすべて削除してもいいですか？\n（※現在の画面以降の入力もすべて削除されます。）",
  "battlesTabQuestionDeleteTurn": "入力中のターンの記録を削除してもいいですか？\n（※現在のターン以降の入力もすべて削除されます。）",
  "battlesTabTitleBattleList": "対戦一覧",
  "battlesTabNoBattle": "表示できる対戦がありません。",
  "battlesTabBattleName": "対戦名",
  "battlesTabBattleDatetime": "対戦日時",
  "battlesTabBattleType": "対戦の種別",
  "battlesTabYourParty": "あなたのパーティ",
  "battlesTabOpponentName": "あいての名前",
  "battlesTabOpponentParty": "あいてのパーティ",
  "battlesTabQuestionChangeParty": "パーティを変更するにはこの後の各ターンの記録を削除する必要があります。\nパーティを変更してもいいですか？",
  "battlesTabQuestionChangePokemon": "相手ポケモンを変更するにはこの後の各ターンの記録を削除する必要があります。\nポケモンを変更してもいいですか？",
  "settingsTabTitleTop": "設定",
  "settingsTabReset": "リセット",
  "settingsTabGetWebImage": "画像をインターネットで取得",
  "settingsTabGetWebImageDescription": "チェックするとポケモンやもちものの画像をインターネットに接続して取得します。\nチェックを外すと画像の代わりにインストール済みのアイコンが表示されます。",
  "settingsTabLanguage": "言語",
  "settingsTabLicenses": "ライセンス情報",
  "settingsTabPrivacyPolicy": "プライバシーポリシー",
  "settingsTabPrivacyPolicyPrompt": "以下のURLからプライバシーポリシーをご確認ください。",
  "settingsTabPrivacyPolicyButton": "Webサイトを開く",
  "settingsTabVersion": "バージョン",
  "settingsTabResetDone": "実行",
  "settingsTabDeleteBattles": "対戦記録削除",
  "settingsTabDeletePokemons": "ポケモン情報削除",
  "settingsTabDeleteParties": "パーティ情報削除",
  "settingsTabOSSLicense": "本アプリOSSライセンス",
  "settingsTabFontLicense": "使用フォントライセンス",
  "battleEffectiveness": "効果",
  "battleEffectivenessNormal": "(普通)",
  "battleEffectivenessGreat": "ばつぐんだ",
  "battleEffectivenessNotGood": "いまひとつのようだ",
  "battleEffectivenessNoEffect": "ないようだ",
  "battleSubstitute": "みがわり",
  "battleSubstituteRemain": "みがわりはのこった",
  "battleSubstituteBroke": "みがわりは消えてしまった",
  "battleHitFail": "命中/失敗",
  "battleHit": "命中",
  "battleSuccessFailure": "成否",
  "battleSucceeded": "成功",
  "battleFailed": "うまく決まらなかった",
  "battleRevivePokemon": "復活させるポケモン",
  "battleAdditionalEffect": "追加効果",
  "battleConsumedItem": "消費したもちもの",
  "battleOpponentAilments": "相手に起きた状態異常",
  "battleAbilityTraced": "トレース後のとくせい",
  "battleIllusionedPokemon": "イリュージョンしていたポケモン",
  "battleStatIncrease": "が高まった",
  "battleOpportunist1": "が",
  "battleOpportunist2": "段階あがった",
  "battleDamaged": "ダメージを負った",
  "battlePlayer": "行動主",
  "battleYou": "あなた",
  "battleAction": "行動",
  "battleParameterEdit": "パラメータ編集",
  "battleSuccessFailureOfAction": "行動の成否",
  "battleActionSuccessed": "行動成功",
  "battleActionFailed": "行動失敗",
  "battleMoveTimes1": "【1回目】",
  "battleMoveTimes2": "【2回目】",
  "battleMoveTimes3": "【3回目】",
  "battleMoveTimes4": "【{count}回目】",
  "battleAddMoveTimes2": "{move}(2回目)を追加",
  "battleAddMoveTimes3": "{move}(3回目)を追加",
  "battleAddMoveTimes4": "{move}({count}回目)を追加",
  "battleProcess": "処理",
  "battleAddProcess": "処理を追加",
  "battleWeatherField": "天気・フィールド",
  "battleEffectType": "種別",
  "battleEffectPlayer": "発動主",
  "battleEffect": "発動効果",
  "battleEffectExpired": "効果が切れた",
  "battleAddTerastal": "テラスタルを追加",
  "battleRemainHP": "{name}の残りHP",
  "battleDamage": "ダメージ {val}",
  "battleRecovery": "回復 {val}",
  "battleTimingPokemonAppear": "ポケモン登場時",
  "battleTimingTurnEnd": "ターン終了時",
  "battleTimingAfterActionDecision": "行動決定直後",
  "battleTimingBeforeMove": "わざ使用前",
  "battleTimingAfterMove": "わざ使用後",
  "battleTimingAfterTerastal": "テラスタル後",
  "battleChangeFainting": "ひんしポケモン交代",
  "battleTimingGameSet": "対戦終了！",
  "battleSelectPokemonPrompt": "あなたの選出ポケモン3匹と相手の先頭ポケモンを選んでください。",
  "battleResultDraw": "引き分け",
  "battleResultYouWin": "あなたの勝利！",
  "battleResultOpponentWin": "{name}の勝利！",
  "battleFellAsleep": "{name}はねむってしまった",
  "battlePoisoned": "{name}はどくにかかった",
  "battleBadPoisoned": "{name}はもうどくにかかった",
  "battleBurned": "{name}はやけどを負った",
  "battleFrozen": "{name}はこおってしまった",
  "battlePararised": "{name}はしびれてしまった",
  "battleFlinched": "{name}はひるんで技がだせない",
  "battleConfused": "{name}はこんらんした",
  "battleConfused2": "こんらんした",
  "battleHPRecovery": "HPが回復した",
  "battleBalloonFloat": "ふうせんで浮いている",
  "battleBalloonBurst": "ふうせんが割れた",
  "battleAttackDown1": "{name}はこうげきが下がった",
  "battleDefenseDown1": "{name}はぼうぎょが下がった",
  "battleSAttackDown1": "{name}はとくこうが下がった",
  "battleSDefenseDown1": "{name}はとくぼうが下がった",
  "battleSpeedDown1": "{name}はすばやさが下がった",
  "battleAccuracyDown1": "{name}は命中率が下がった",
  "battleEvasivenessDown1": "{name}は回避率が下がった",
  "battleAttackUp1": "{name}はこうげきが上がった",
  "battleDefenseUp1": "{name}はぼうぎょが上がった",
  "battleSAttackUp1": "{name}はとくこうが上がった",
  "battleSDefenseUp1": "{name}はとくぼうが上がった",
  "battleSpeedUp1": "{name}はすばやさが上がった",
  "battleAccuracyUp1": "{name}は命中率が上がった",
  "battleEvasivenessUp1": "{name}は回避率が上がった",
  "battleAttackDown2": "{name}はこうげきががくっと下がった",
  "battleDefenseDown2": "{name}はぼうぎょががくっと下がった",
  "battleSAttackDown2": "{name}はとくこうががくっと下がった",
  "battleSDefenseDown2": "{name}はとくぼうががくっと下がった",
  "battleSpeedDown2": "{name}はすばやさががくっと下がった",
  "battleAccuracyDown2": "{name}は命中率ががくっと下がった",
  "battleEvasivenessDown2": "{name}は回避率ががくっと下がった",
  "battleAttackUp2": "{name}はこうげきがぐーんと上がった",
  "battleDefenseUp2": "{name}はぼうぎょがぐーんと上がった",
  "battleSAttackUp2": "{name}はとくこうがぐーんと上がった",
  "battleSDefenseUp2": "{name}はとくぼうがぐーんと上がった",
  "battleSpeedUp2": "{name}はすばやさがぐーんと上がった",
  "battleAccuracyUp2": "{name}は命中率がぐーんと上がった",
  "battleEvasivenessUp2": "{name}は回避率がぐーんと上がった",
  "battleABCDSUp1": "{name}はこうげき・ぼうぎょ・とくこう・とくぼう・すばやさが上がった",
  "battleRankUp1": "があがった",
  "battleRankUp2": "がぐーんとあがった",
  "battleRankDown1": "がさがった",
  "battleBurnDownItem": "もちものを焼き尽くした",
  "battleFlingItem": "もちものを投げつけた",
  "battleConsumeOpponentBerry": "{name}のきのみを消費した",
  "battleOpponentConsumesBerry": "{name}はきのみを消費した",
  "battleAbilityYouGet": "あなたが得たとくせい",
  "battleKnockOffItem": "もちものをはたきおとした",
  "battleItemYouGet": "あなたが手に入れたもちもの",
  "battleMoveType": "わざのタイプ",
  "battlePokemonToChange": "交代先ポケモン",
  "battleStealItem": "もちものをぬすんだ",
  "battleTypeToChange": "変更後タイプ",
  "battleExhaustedConfused": "疲れ果ててこんらんした",
  "battleGoAllOut": "本気を出した!",
  "battlePokemonChange": "ポケモン交代",
  "battleSurrender": "こうさん",
  "battleFailureCause": "失敗の原因",
  "battleMoveTryToUse": "使用しようととしたわざ",
  "battleDamageCalcBase": "ダメージ計算 : {level}(わざ使用者レベル)×2÷5+2 ×{movePower}(威力)×{attackStr}÷{defenseStr} ÷50+2 ×0.85 ~ 1.00(乱数) ",
  "battleDamageWeather1_5": "×1.5(天気) ",
  "battleDamageWeather0_5": "×0.5(天気) ",
  "battleDamageCritical1_5": "×1.5(急所) ",
  "battleDamageRandom85_100": "×85 ~ 100÷100(乱数) ",
  "battleDamageTypeBonus": "×{rate}(タイプ一致) ",
  "battleDamageTypeEffectiveness": "×{rate}(相性) ",
  "battleDamageBurned": "×0.5(やけど) ",
  "battleDamageWall": "×0.5(壁) ",
  "battleDamageBrainForce": "×1.25(ブレインフォース) ",
  "battleDamageSniper": "×1.5(スナイパー) ",
  "battleDamageTintedLens": "×2(いろめがね) ",
  "battleDamageFluffy": "×2(もふもふ) ",
  "battleDamageAbility0_5": "×0.5(とくせい) ",
  "battleDamageAbility0_75": "×0.75(とくせい) ",
  "battleDamageExpertBelt": "×1.2(たつじんのおび) ",
  "battleDamageMetronome": "×{rate}(メトロノーム) ",
  "battleDamageLifeOrb": "×1.3(いのちのたま) ",
  "battleDamageBerry": "×{rate}(半減きのみ) ",
  "battleDamageOthers": "×2(その他補正) ",
  "battleDamageAttackerAttack": "(攻撃側のこうげき)",
  "battleDamageAttackerSAttack": "(攻撃側のとくこう)",
  "battleDamageDefenderDefense": "(防御側のぼうぎょ)",
  "battleDamageDefenderSDefense": "(防御側のとくぼう)",
  "battleDamageFixed1": "ダメージ計算 : {damage}(固定ダメージ) = {damage}",
  "battleDamageFixed2": "ダメージ計算 : {damage}%(固定ダメージ) = {damage}%",
  "battleDamageFixed3": "ダメージ計算 : 40(固定ダメージ) = 40",
  "battleDamageFixed4": "ダメージ計算 : {level}(わざ使用者レベル) = {level}",
  "battleDamageFixed5": "ダメージ計算 : 20(固定ダメージ) = 20",
  "battleDamageFixed6": "ダメージ計算 : {remainHP}(固定ダメージ) = {remainHP}",
  "battleGuideConfZoroark": "{name}の正体を{name2}で確定しました。",
  "battleGuideConfMove": "{name}のわざの1つを{move}で確定しました。",
  "battleGuideConfAbility": "{name}のとくせいを{ability}で確定しました。",
  "battleGuideConfItem1": "{name}の持っていたもちものを{item}で確定しました。",
  "battleGuideConfItem2": "{name}のもちものを{item}で確定しました。",
  "battleGuideSapConfAttack": "{name}のこうげき実数値を{attack}で確定しました。",
  "battleGuideLeechSeedConfHP": "{name}のHP実数値を{minS} ~ {maxS}で確定しました。",
  "battleGuideMoveDamagedToStatus": "{name}の{status}実数値を{minS} ~ {maxS}で確定しました。",
  "battleGuideMoveOrderConfSpeed": "{name}のすばやさ実数値を{minS} ~ {maxS}で確定しました。",
  "battleConfusedAttack": "自分をこうげきした",
  "battleMoveOrderOfDamage": "ダメージ大きい順",
  "battleMoveAdoptionRate": "採用率高い順"
}